--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "styled-components": "^6.0.7",
     "typescript": "5.2.2",
     "yarn": "^1.22.19"
